stuck on .focus function wokring

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /*For every even numbered element, have a light yellow background.*/
 
-
+x	
 
 .person:nth-child(even) {
 	background-color: lightyellow;
